src/test/ui/order-dependent-cast-inference.stderr
error[E0641]: cannot cast to a pointer of an unknown kind
  --> $DIR/order-dependent-cast-inference.rs:5:17
   |
LL |     let mut y = 0 as *const _;
   |                 ^^^^^--------
   |                      |
   |                      help: consider giving more type information
   |
   = note: The type information given here is insufficient to check whether the pointer cast is valid

error: aborting due to previous error

